mi primer cambio en github

--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../img/nube.png">
     <title>SKY OV</title>
 </head>
 <body>
@@ -18,15 +22,12 @@
         </ul>
     </nav>
     <section>
-        <p> Venimos desde Argentina a cumplir un sueño. Somos un emprendimiento independiente, amantes de la ropa. 
-            Nuestro unico objetivo es producir el mejor material a un precio accesible.
-         </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quasi quod autem nostrum. Inventore expedita iusto odit reprehenderit quia autem eum, sit voluptatem totam, temporibus iste modi quisquam deserunt dolorum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quasi quod autem nostrum. Inventore expedita iusto odit reprehenderit quia autem eum, sit voluptatem totam, temporibus iste modi quisquam deserunt dolorum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quasi quod autem nostrum. Inventore expedita iusto odit reprehenderit quia autem eum, sit voluptatem totam, temporibus iste modi quisquam deserunt dolorum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quasi quod autem nostrum. Inventore expedita iusto odit reprehenderit quia autem eum, sit voluptatem totam, temporibus iste modi quisquam deserunt dolorum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quasi quod autem nostrum. Inventore expedita iusto odit reprehenderit quia autem eum, sit voluptatem totam, temporibus iste modi quisquam deserunt dolorum?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quasi quod autem nostrum. Inventore expedita iusto odit reprehenderit quia autem eum, sit voluptatem totam, temporibus iste modi quisquam deserunt dolorum?</p>
+    <h2>guia de talles</h2>    
+    <p>esgetdhg</p> 
+    <h2>medios de pago</h2>
+    <p>sefjhsbfd</p>
+    <h2>politica de devolución</h2>
+    <p>sdgerg</p>
         
     </section>
     <footer>
