--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="remeras, oversize, batik, devolucion, talles, guia de talles">
+    <meta name="description" content="Guia de talles y devolucion a todo el pais">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../img/nube.png">
-    <title>SKY OV</title>
+    <title>SKY OV | Sobre Nosotros</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../img/nube.png" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img src="../img/nube.png" alt="" class="nube_nav"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -75,11 +77,12 @@
         </tr>
         </tbody>
     </table>
-    <h2 class="devolucion">POLITICA DE DEVOLUCION</h2>
+    </section>
+    <section>
+        <h2 class="devolucion">POLITICA DE DEVOLUCION</h2>
     <p class="politica1">Los cambios sólo pueden ser realizados durante los 15 días siguientes a la compra y con el producto bien doblado, dentro del packaging en que llegó y en perfecto estado. De lo contrario, el cambio no se efectuará.</p>
     <p class="politica1">No realizamos devoluciones, solo cambios.</p>
     </section>
-    
     
     <footer>
         SKY OV | ©2022 all rights reserved
