--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="remeras, oversize, batik, ubcicaion, mapa">
+    <meta name="description" content="Aqui nos vas a encontrar">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../img/nube.png">
-    <title>SKY OV</title>
+    <title>SKY OV | Ubicacion</title>
 </head>
 <body>
 
 <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../img/nube.png" alt=""></a>
+        <a class="navbar-brand" href="../index.html"><img src="../img/nube.png" alt="" class="nube_nav"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,7 +50,7 @@
         <h1 class="aqui_mapa">¡AQUI NOS ENCONTRARAS!</h1>
     </section>
     
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.716382100992!2d-58.476116485272506!3d-34.61133266540701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9fb290ea3fb%3A0xb05a2258edfd813e!2sComuna%2011%2C%20Gral.%20Jos%C3%A9%20Gervasio%20Artigas%201717%2C%20C1416AKO%20CABA!5e0!3m2!1ses!2sar!4v1666378501158!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.716382100992!2d-58.476116485272506!3d-34.61133266540701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9fb290ea3fb%3A0xb05a2258edfd813e!2sComuna%2011%2C%20Gral.%20Jos%C3%A9%20Gervasio%20Artigas%201717%2C%20C1416AKO%20CABA!5e0!3m2!1ses!2sar!4v1666378501158!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa" ></iframe>
 
     <footer>
         SKY OV | ©2022 all rights reserved
