--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="head">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="img/nube.png" alt="" class="nube_nav"></a>
+          <a class="navbar-brand" href="index.html"><img src="img/nube.png" alt="logo" class="nube_nav"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -71,13 +71,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/modeloremera1.jpg" class="d-block w-100" alt="...">
+                <img src="img/modeloremera1.jpg" class="d-block w-100" alt="modelo remera 1">
               </div>
               <div class="carousel-item">
-                <img src="img/modeloremera2.jpg" class="d-block w-100" alt="...">
+                <img src="img/modeloremera2.jpg" class="d-block w-100" alt="modelo remera 2">
               </div>
               <div class="carousel-item">
-                <img src="img/modeloremera3.jpg" class="d-block w-100" alt="...">
+                <img src="img/modeloremera3.jpg" class="d-block w-100" alt="modelo remera 3">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
