--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
     <header class="head">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../img/nube.png" alt="" class="nube_nav"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../img/nube.png" alt="logo" class="nube_nav"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,7 +46,7 @@
     </header>
     
     <main class="main">
-        <h2 class="formulario_contacto">FORMULARIO DE CONTACTO</h2>
+        <h1 class="formulario_contacto">FORMULARIO DE CONTACTO</h1>
         
         <section class="flex-center">
 
